--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,4 +1,3 @@
-
 @article{hedjazi_multi-agent_2019,
 	title = {A multi-agent system for distributed maintenance scheduling},
 	volume = {77},
@@ -12,7 +11,10 @@
 	month = jul,
 	year = {2019},
 	pages = {1--11},
-	file = {Hedjazi et al. - 2019 - A multi-agent system for distributed maintenance s.pdf:/home/scipo/Zotero/storage/72K7QR47/Hedjazi et al. - 2019 - A multi-agent system for distributed maintenance s.pdf:application/pdf},
+	file = {Hedjazi et al. - 2019 - A multi-agent system for distributed
+	        maintenance s.pdf:/home/scipo/Zotero/storage/72K7QR47/Hedjazi et al.
+	        - 2019 - A multi-agent system for distributed maintenance
+	        s.pdf:application/pdf},
 }
 
 @book{talbi_metaheuristics_2009,
@@ -25,8 +27,11 @@
 	author = {Talbi, El-Ghazali},
 	year = {2009},
 	note = {OCLC: ocn230183356},
-	keywords = {Computer algorithms, Data processing, Heuristic programming, Mathematical optimization, Metaheuristics, Problem solving},
-	file = {Talbi - 2009 - Metaheuristics from design to implementation.pdf:/home/scipo/Zotero/storage/ZMLXI6LK/Talbi - 2009 - Metaheuristics from design to implementation.pdf:application/pdf},
+	keywords = {Computer algorithms, Data processing, Heuristic programming,
+	            Mathematical optimization, Metaheuristics, Problem solving},
+	file = {Talbi - 2009 - Metaheuristics from design to
+	        implementation.pdf:/home/scipo/Zotero/storage/ZMLXI6LK/Talbi - 2009 -
+	        Metaheuristics from design to implementation.pdf:application/pdf},
 }
 
 @book{schwindt_handbook_2015,
@@ -40,7 +45,10 @@
 	editor = {Schwindt, Christoph and Zimmermann, Jürgen},
 	year = {2015},
 	doi = {10.1007/978-3-319-05915-0},
-	file = {Schwindt and Zimmermann - 2015 - Handbook on Project Management and Scheduling Vol..pdf:/home/scipo/Zotero/storage/NXJZVAJX/Schwindt and Zimmermann - 2015 - Handbook on Project Management and Scheduling Vol..pdf:application/pdf},
+	file = {Schwindt and Zimmermann - 2015 - Handbook on Project Management and
+	        Scheduling Vol..pdf:/home/scipo/Zotero/storage/NXJZVAJX/Schwindt and
+	        Zimmermann - 2015 - Handbook on Project Management and Scheduling
+	        Vol..pdf:application/pdf},
 }
 
 @book{schwindt_handbook_2015-1,
@@ -54,7 +62,10 @@
 	editor = {Schwindt, Christoph and Zimmermann, Jürgen},
 	year = {2015},
 	doi = {10.1007/978-3-319-05443-8},
-	file = {Schwindt and Zimmermann - 2015 - Handbook on Project Management and Scheduling Vol..pdf:/home/scipo/Zotero/storage/D6UKIQK9/Schwindt and Zimmermann - 2015 - Handbook on Project Management and Scheduling Vol..pdf:application/pdf},
+	file = {Schwindt and Zimmermann - 2015 - Handbook on Project Management and
+	        Scheduling Vol..pdf:/home/scipo/Zotero/storage/D6UKIQK9/Schwindt and
+	        Zimmermann - 2015 - Handbook on Project Management and Scheduling
+	        Vol..pdf:application/pdf},
 }
 
 @book{pinedo_scheduling_2022,
@@ -69,16 +80,33 @@
 	author = {Pinedo, Michael L.},
 	year = {2022},
 	doi = {10.1007/978-3-031-05921-6},
-	file = {Pinedo - 2022 - Scheduling Theory, Algorithms, and Systems.pdf:/home/scipo/Zotero/storage/AJSQAXUV/Pinedo - 2022 - Scheduling Theory, Algorithms, and Systems.pdf:application/pdf},
+	file = {Pinedo - 2022 - Scheduling Theory, Algorithms, and
+	        Systems.pdf:/home/scipo/Zotero/storage/AJSQAXUV/Pinedo - 2022 -
+	        Scheduling Theory, Algorithms, and Systems.pdf:application/pdf},
 }
 
 @article{adhau_multi-agent_2013,
-	title = {A multi-agent system for decentralized multi-project scheduling with resource transfers},
+	title = {A multi-agent system for decentralized multi-project scheduling
+	         with resource transfers},
 	volume = {146},
 	issn = {09255273},
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S092552731300368X},
 	doi = {10.1016/j.ijpe.2013.08.013},
-	abstract = {The companies dealing with multiple projects are geographically distributed at different locations. These projects require local (always available to the concerned project) and global (shared among the projects) resources that are available in limited quantity. The global resources are generally required to be transferred physically among the projects, consuming signiﬁcant amounts of both time and cost. The existing multi-agent systems for decentralized resource constrained multi-project scheduling problem (DRCMPSP) do not consider the resource transfer time and related cost for execution and control. We introduce DRCMPSP-RT that explicitly considers the transfer of shared global resources. This paper proposes a novel distributed multi-agent system using auctions based negotiation (DMAS/RIA) approach for the resource intervals and allocating multiple different types of shared resources amongst multiple competing projects.},
+	abstract = {The companies dealing with multiple projects are geographically
+	            distributed at different locations. These projects require local
+	            (always available to the concerned project) and global (shared
+	            among the projects) resources that are available in limited
+	            quantity. The global resources are generally required to be
+	            transferred physically among the projects, consuming signiﬁcant
+	            amounts of both time and cost. The existing multi-agent systems
+	            for decentralized resource constrained multi-project scheduling
+	            problem (DRCMPSP) do not consider the resource transfer time and
+	            related cost for execution and control. We introduce DRCMPSP-RT
+	            that explicitly considers the transfer of shared global
+	            resources. This paper proposes a novel distributed multi-agent
+	            system using auctions based negotiation (DMAS/RIA) approach for
+	            the resource intervals and allocating multiple different types of
+	            shared resources amongst multiple competing projects.},
 	language = {en},
 	number = {2},
 	urldate = {2024-04-17},
@@ -87,7 +115,10 @@
 	month = dec,
 	year = {2013},
 	pages = {646--661},
-	file = {Adhau et al. - 2013 - A multi-agent system for decentralized multi-proje.pdf:/home/scipo/Zotero/storage/EQK3TKRT/Adhau et al. - 2013 - A multi-agent system for decentralized multi-proje.pdf:application/pdf},
+	file = {Adhau et al. - 2013 - A multi-agent system for decentralized
+	        multi-proje.pdf:/home/scipo/Zotero/storage/EQK3TKRT/Adhau et al. -
+	        2013 - A multi-agent system for decentralized
+	        multi-proje.pdf:application/pdf},
 }
 
 @article{de_jonge_review_2020,
@@ -96,7 +127,22 @@
 	issn = {0377-2217},
 	url = {https://www.sciencedirect.com/science/article/pii/S0377221719308045},
 	doi = {10.1016/j.ejor.2019.09.047},
-	abstract = {To this day, continuous developments of technical systems and increasing reliance on equipment have resulted in a growing importance of effective maintenance activities. During the last couple of decades, a substantial amount of research has been carried out on this topic. In this study, we review more than two hundred papers on maintenance modeling and optimization that have appeared in the period 2001 to 2018. We begin by describing terms commonly used in the modeling process. Then, in our classification, we first distinguish single-unit and multi-unit systems. Further sub-classification follows, based on the state space of the deterioration process modeled. Other features that we discuss in this review are discrete and continuous condition monitoring, inspection, replacement, repair, and the various types of dependencies that may exist between units within systems. We end with the main developments during the review period and with potential future research directions.},
+	abstract = {To this day, continuous developments of technical systems and
+	            increasing reliance on equipment have resulted in a growing
+	            importance of effective maintenance activities. During the last
+	            couple of decades, a substantial amount of research has been
+	            carried out on this topic. In this study, we review more than two
+	            hundred papers on maintenance modeling and optimization that have
+	            appeared in the period 2001 to 2018. We begin by describing terms
+	            commonly used in the modeling process. Then, in our
+	            classification, we first distinguish single-unit and multi-unit
+	            systems. Further sub-classification follows, based on the state
+	            space of the deterioration process modeled. Other features that
+	            we discuss in this review are discrete and continuous condition
+	            monitoring, inspection, replacement, repair, and the various
+	            types of dependencies that may exist between units within
+	            systems. We end with the main developments during the review
+	            period and with potential future research directions.},
 	number = {3},
 	urldate = {2024-04-18},
 	journal = {European Journal of Operational Research},
@@ -105,16 +151,36 @@
 	year = {2020},
 	keywords = {Maintenance, Repair, Replacement},
 	pages = {805--824},
-	file = {Full Text:/home/scipo/Zotero/storage/LE2F836R/de Jonge and Scarf - 2020 - A review on maintenance optimization.pdf:application/pdf},
+	file = {Full Text:/home/scipo/Zotero/storage/LE2F836R/de Jonge and Scarf -
+	        2020 - A review on maintenance optimization.pdf:application/pdf},
 }
 
 @article{snauwaert_classification_2023,
-	title = {A classification and new benchmark instances for the multi-skilled resource-constrained project scheduling problem},
+	title = {A classification and new benchmark instances for the multi-skilled
+	         resource-constrained project scheduling problem},
 	volume = {307},
 	issn = {0377-2217},
 	url = {https://www.sciencedirect.com/science/article/pii/S0377221722004519},
 	doi = {10.1016/j.ejor.2022.05.049},
-	abstract = {This paper studies and analyses the multi-skilled resource-constrained project scheduling problem (MSRCPSP). We present a new classification scheme based on an existing classification scheme for project scheduling problems. This allows researchers to classify all multi-skilled project scheduling problems and its extensions. Furthermore, we propose a new data generation procedure for the MSRCPSP and introduce multiple artificial datasets for varying research purposes. The new datasets are generated based on new multi-skilled resource parameters and are compared to existing benchmark datasets in the literature. A set of 7 empirical multi-skilled project instances from software and railway construction companies are collected in order to validate the quality of the artificial datasets. Solutions are obtained through a genetic algorithm and by solving a mixed-integer linear programming formulation with CPLEX 12.6. The hardness of the multi-skilled project instances is investigated in the computational experiments. An experimental analysis studies the impact of skill availability, workforce size and multi-skilling on the makespan of the project.},
+	abstract = {This paper studies and analyses the multi-skilled
+	            resource-constrained project scheduling problem (MSRCPSP). We
+	            present a new classification scheme based on an existing
+	            classification scheme for project scheduling problems. This
+	            allows researchers to classify all multi-skilled project
+	            scheduling problems and its extensions. Furthermore, we propose a
+	            new data generation procedure for the MSRCPSP and introduce
+	            multiple artificial datasets for varying research purposes. The
+	            new datasets are generated based on new multi-skilled resource
+	            parameters and are compared to existing benchmark datasets in the
+	            literature. A set of 7 empirical multi-skilled project instances
+	            from software and railway construction companies are collected in
+	            order to validate the quality of the artificial datasets.
+	            Solutions are obtained through a genetic algorithm and by solving
+	            a mixed-integer linear programming formulation with CPLEX 12.6.
+	            The hardness of the multi-skilled project instances is
+	            investigated in the computational experiments. An experimental
+	            analysis studies the impact of skill availability, workforce size
+	            and multi-skilling on the makespan of the project.},
 	number = {1},
 	urldate = {2024-04-18},
 	journal = {European Journal of Operational Research},
@@ -123,31 +189,65 @@
 	year = {2023},
 	keywords = {Project scheduling, Resource-constrained scheduling, Skills},
 	pages = {1--19},
-	file = {Full Text:/home/scipo/Zotero/storage/9G3VU7KQ/Snauwaert and Vanhoucke - 2023 - A classification and new benchmark instances for t.pdf:application/pdf;ScienceDirect Snapshot:/home/scipo/Zotero/storage/WHFNZBCL/S0377221722004519.html:text/html},
+	file = {Full Text:/home/scipo/Zotero/storage/9G3VU7KQ/Snauwaert and
+	        Vanhoucke - 2023 - A classification and new benchmark instances for
+	        t.pdf:application/pdf;ScienceDirect
+	        Snapshot:/home/scipo/Zotero/storage/WHFNZBCL/S0377221722004519.html:text/html
+	        },
 }
 
 @article{meignan_review_2015,
-	title = {A {Review} and {Taxonomy} of {Interactive} {Optimization} {Methods} in {Operations} {Research}},
+	title = {A {Review} and {Taxonomy} of {Interactive} {Optimization} {Methods}
+	         in {Operations} {Research}},
 	volume = {5},
 	issn = {2160-6455, 2160-6463},
 	url = {https://dl.acm.org/doi/10.1145/2808234},
 	doi = {10.1145/2808234},
-	abstract = {This article presents a review and a classification of interactive optimization methods. These interactive methods are used for solving optimization problems. The interaction with an end user or decision maker aims at improving the efficiency of the optimization procedure, enriching the optimization model, or informing the user regarding the solutions proposed by the optimization system. First, we present the challenges of using optimization methods as a tool for supporting decision making, and we justify the integration of the user in the optimization process. This integration is generally achieved via a dynamic interaction between the user and the system. Next, the different classes of interactive optimization approaches are presented. This detailed review includes trial and error, interactive reoptimization, interactive multiobjective optimization, interactive evolutionary algorithms, human-guided search, and other approaches that are less well covered in the research literature. On the basis of this review, we propose a classification that aims to better describe and compare interaction mechanisms. This classification offers two complementary views on interactive optimization methods. The first perspective focuses on the user’s contribution to the optimization process, and the second concerns the components of interactive optimization systems. Finally, on the basis of this review and classification, we identify some open issues and potential perspectives for interactive optimization methods.},
+	abstract = {This article presents a review and a classification of
+	            interactive optimization methods. These interactive methods are
+	            used for solving optimization problems. The interaction with an
+	            end user or decision maker aims at improving the efficiency of
+	            the optimization procedure, enriching the optimization model, or
+	            informing the user regarding the solutions proposed by the
+	            optimization system. First, we present the challenges of using
+	            optimization methods as a tool for supporting decision making,
+	            and we justify the integration of the user in the optimization
+	            process. This integration is generally achieved via a dynamic
+	            interaction between the user and the system. Next, the different
+	            classes of interactive optimization approaches are presented.
+	            This detailed review includes trial and error, interactive
+	            reoptimization, interactive multiobjective optimization,
+	            interactive evolutionary algorithms, human-guided search, and
+	            other approaches that are less well covered in the research
+	            literature. On the basis of this review, we propose a
+	            classification that aims to better describe and compare
+	            interaction mechanisms. This classification offers two
+	            complementary views on interactive optimization methods. The
+	            first perspective focuses on the user’s contribution to the
+	            optimization process, and the second concerns the components of
+	            interactive optimization systems. Finally, on the basis of this
+	            review and classification, we identify some open issues and
+	            potential perspectives for interactive optimization methods.},
 	language = {en},
 	number = {3},
 	urldate = {2024-04-18},
 	journal = {ACM Transactions on Interactive Intelligent Systems},
-	author = {Meignan, David and Knust, Sigrid and Frayret, Jean-Marc and Pesant, Gilles and Gaud, Nicolas},
+	author = {Meignan, David and Knust, Sigrid and Frayret, Jean-Marc and Pesant
+	          , Gilles and Gaud, Nicolas},
 	month = oct,
 	year = {2015},
 	pages = {1--43},
-	file = {Meignan et al. - 2015 - A Review and Taxonomy of Interactive Optimization .pdf:/home/scipo/Zotero/storage/MU3Y82T3/Meignan et al. - 2015 - A Review and Taxonomy of Interactive Optimization .pdf:application/pdf},
+	file = {Meignan et al. - 2015 - A Review and Taxonomy of Interactive
+	        Optimization .pdf:/home/scipo/Zotero/storage/MU3Y82T3/Meignan et al.
+	        - 2015 - A Review and Taxonomy of Interactive Optimization
+	        .pdf:application/pdf},
 }
 
 @book{gupta_multi_2022,
 	address = {Singapore},
 	series = {Springer {Tracts} in {Human}-{Centered} {Computing}},
-	title = {Multi {Agent} {Systems}: {Technologies} and {Applications} towards {Human}-{Centered}},
+	title = {Multi {Agent} {Systems}: {Technologies} and {Applications} towards
+	         {Human}-{Centered}},
 	copyright = {https://www.springer.com/tdm},
 	isbn = {978-981-19049-2-9 978-981-19049-3-6},
 	shorttitle = {Multi {Agent} {Systems}},
@@ -155,16 +255,52 @@
 	language = {en},
 	urldate = {2024-04-18},
 	publisher = {Springer Nature Singapore},
-	editor = {Gupta, Shibakali and Banerjee, Indradip and Bhattacharyya, Siddhartha},
+	editor = {Gupta, Shibakali and Banerjee, Indradip and Bhattacharyya,
+	          Siddhartha},
 	year = {2022},
 	doi = {10.1007/978-981-19-0493-6},
-	file = {Gupta et al. - 2022 - Multi Agent Systems Technologies and Applications.pdf:/home/scipo/Zotero/storage/HET2HQQT/Gupta et al. - 2022 - Multi Agent Systems Technologies and Applications.pdf:application/pdf},
+	file = {Gupta et al. - 2022 - Multi Agent Systems Technologies and
+	        Applications.pdf:/home/scipo/Zotero/storage/HET2HQQT/Gupta et al. -
+	        2022 - Multi Agent Systems Technologies and
+	        Applications.pdf:application/pdf},
 }
 
 @book{palmer_maintenance_2019,
 	edition = {4th edition},
 	title = {Maintenance {Planning} and {Scheduling} {Handbook}, 4th {Edition}},
-	abstract = {The industry-standard resource for maintenance planning and scheduling—thoroughly revised for the latest advancesWritten by a Certified Maintenance and Reliability Professional (CMRP) with more than three decades of experience, this resource provides proven planning and scheduling strategies that will take any maintenance organization to the next level of performance. The book resolves common industry frustration with planning and reduces the complexity of scheduling in addition to dealing with reactive maintenance. You will find coverage of estimating labor hours, setting the level of plan detail, creating practical weekly and daily schedules, kitting parts, and more, all designed to increase your workforce without hiring. Much of the text applies the timeless management principles of Dr. W. Edwards Deming and Dr. Peter F. Drucker. You will learn how you can do more proactive work when your hands are full of reactive work.Maintenance Planning and Scheduling Handbook, Fourth Edition, features more new case studies showing real world successes, a new chapter on getting better storeroom support, major revisions that describe the best KPIs for planning, major additions to the issue of “selling” planning to gain support, revisions to make work order codes more useful, a new appendix on numerically auditing planning success, and a new appendix devoted entirely to selecting a great maintenance planner.Maintenance Planning and Scheduling Handbook, Fourth Edition covers:•The business case for the benefit of planning•Planning principles•Scheduling principles•Handling reactive maintenance•Planning a work order•Creating a weekly schedule•Daily scheduling and supervision•Parts and planners•The computer CMMS in maintenance•How planning works with PM, PdM, and projects•Controlling planning: the best KPIs KPIs for planning and overall maintenance•Shutdown, turnaround, overhaul, and outage management•Selling, organizing, analyzing, and auditing planning},
+	abstract = {The industry-standard resource for maintenance planning and
+	            scheduling—thoroughly revised for the latest advancesWritten by a
+	            Certified Maintenance and Reliability Professional (CMRP) with
+	            more than three decades of experience, this resource provides
+	            proven planning and scheduling strategies that will take any
+	            maintenance organization to the next level of performance. The
+	            book resolves common industry frustration with planning and
+	            reduces the complexity of scheduling in addition to dealing with
+	            reactive maintenance. You will find coverage of estimating labor
+	            hours, setting the level of plan detail, creating practical
+	            weekly and daily schedules, kitting parts, and more, all designed
+	            to increase your workforce without hiring. Much of the text
+	            applies the timeless management principles of Dr. W. Edwards
+	            Deming and Dr. Peter F. Drucker. You will learn how you can do
+	            more proactive work when your hands are full of reactive
+	            work.Maintenance Planning and Scheduling Handbook, Fourth Edition
+	            , features more new case studies showing real world successes, a
+	            new chapter on getting better storeroom support, major revisions
+	            that describe the best KPIs for planning, major additions to the
+	            issue of “selling” planning to gain support, revisions to make
+	            work order codes more useful, a new appendix on numerically
+	            auditing planning success, and a new appendix devoted entirely to
+	            selecting a great maintenance planner.Maintenance Planning and
+	            Scheduling Handbook, Fourth Edition covers:•The business case for
+	            the benefit of planning•Planning principles•Scheduling
+	            principles•Handling reactive maintenance•Planning a work
+	            order•Creating a weekly schedule•Daily scheduling and
+	            supervision•Parts and planners•The computer CMMS in
+	            maintenance•How planning works with PM, PdM, and
+	            projects•Controlling planning: the best KPIs KPIs for planning
+	            and overall maintenance•Shutdown, turnaround, overhaul, and
+	            outage management•Selling, organizing, analyzing, and auditing
+	            planning},
 	language = {English},
 	publisher = {McGraw Hill},
 	author = {Palmer, Richard D.},
