--- a/tex/definitions.tex
+++ b/tex/definitions.tex
@@ -41,8 +41,8 @@
 \newcommand{\ParStartStart}{start\_start_{\ElementOperation1, \ElementOperation2}}
 
 \newcommand{\ParFinishStart}{finish\_start_{\ElementOperation1, \ElementOperation2}}
-\newcommand{\ParEarliestStart}{ES_{\ElementOperation}(\VarMetaTime)}
-\newcommand{\ParLatestFinish}{LF_{\ElementOperation}(\VarMetaTime)}
+\newcommand{\ParEarliestStart}{earliest\_start_{\ElementOperation}(\VarMetaTime)}
+\newcommand{\ParLatestFinish}{latest\_finish_{\ElementOperation}(\VarMetaTime)}
 \newcommand{\ParNumberOfPeople}{number_{\ElementOperation}(\VarMetaTime)}
 
 \newcommand{\ParOperatingTime}{operating\_time_{\ElementOperation}}
