--- a/tex/tables/parameter_table.tex
+++ b/tex/tables/parameter_table.tex
@@ -1,1 +1,122 @@
 
+\section{Parameter Table}
+
+\newcolumntype{b}{X}
+\newcolumntype{s}{>{\hsize=.5\hsize}X}
+\newcolumntype{4}{
+	>{\hsize=.6\hsize\linewidth=\hsize}X
+	>{\hsize=.7\hsize\linewidth=\hsize}X
+	>{\hsize=.7\hsize\linewidth=\hsize}X
+	>{\hsize=2.0\hsize\linewidth=\hsize}X
+}
+\newcolumntype{5}{
+	>{\hsize=1.6\hsize\linewidth=\hsize}X
+	>{\hsize=0.8\hsize\linewidth=\hsize}X
+	>{\hsize=0.8\hsize\linewidth=\hsize}X
+	>{\hsize=0.8\hsize\linewidth=\hsize}X
+}
+\newcolumntype{3}{
+	>{\hsize=.5\hsize\linewidth=\hsize}X
+	>{\hsize=.5\hsize\linewidth=\hsize}X
+	>{\hsize=2.0\hsize\linewidth=\hsize}X
+}
+\newcolumntype{2}{
+	>{\hsize=1.0\hsize\linewidth=\hsize}X
+	>{\hsize=1.0\hsize\linewidth=\hsize}X
+}
+ 
+\begin{table*}[htbp!]
+\begin{tabularx}{\textwidth}{4}
+\toprule
+\textbf{Element}     & \textbf{Set}          & \textbf{Dependent Variables} & \textbf{Description}  \\ 
+\midrule
+$\ElementWorkOrder$    & $\SetWorkOrder{}$   & $\VarMetaTime$ & The set of all work orders               \\ 
+$\ElementPeriod$       & $\SetPeriod$        & $\VarMetaTime$ & The set of all weekly periods            \\ 
+$\ElementResource$     & $\SetResource$      & $\VarMetaTime$ & The set of all resources                 \\ 
+$\ElementOperation$    & $\SetOperation{}{}$ & $\VarMetaTime$ & The set of all operations                \\ 
+$\ElementDays$         & $\SetDays{}$        & $\VarMetaTime$ & The set of all days                      \\ 
+$\ElementActivity$     & $\SetActivity{}{}$  & $\VarMetaTime$ & The set of all activities                \\ 
+$\ElementTechnician$   & $\SetTechnician$    & $\VarMetaTime$ & The set of all technicians               \\ 
+$\ElementWorkSegment$  & $\SetWorkSegment$   & $\VarMetaTime$ & The set of all technician work segments  \\ 
+$\ElementTimeInstance$ & $\SetTimeInstance$  & $\VarMetaTime$ & The set of all time instances            \\ 
+$\ElementEvent$        & $\SetEvent$         & $\VarMetaTime$ & The set of all technician events         \\
+\bottomrule
+\end{tabularx}
+\caption{Sets used in the model setup}
+\end{table*}
+
+\begin{table*}[htbp!]
+\begin{tabularx}{\textwidth}{5}
+\toprule
+\textbf{Parameter}               & set & var & \textbf{Description}  \\ 
+\midrule
+$\ParStrategicValue$             & set & var & DESCRIPTION \\ 
+$\ParStrategicPenalty$           & set & var & DESCRIPTION \\ 
+$\ParClusteringValue$            & set & var & DESCRIPTION \\ 
+$\ParStrategicResource$          & set & var & DESCRIPTION \\ 
+$\ParStrategicWorkOrderWeight$   & set & var & DESCRIPTION \\ 
+$\ParStrategicInclude$           & set & var & DESCRIPTION \\ 
+$\ParStrategicExclude$           & set & var & DESCRIPTION \\ 
+\midrule
+$\ParTacticalValue$              & set & var & DESCRIPTION \\ 
+$\ParTacticalPenalty$            & set & var & DESCRIPTION \\ 
+$\ParOperationWork{}$            & set & var & DESCRIPTION \\ 
+$\ParTacticalResource$           & set & var & DESCRIPTION \\ 
+$\ParStartStart$                 & set & var & DESCRIPTION \\ 
+$\ParFinishStart$                & set & var & DESCRIPTION \\ 
+$\ParEarliestStart$              & set & var & DESCRIPTION \\ 
+$\ParLatestFinish$               & set & var & DESCRIPTION \\ 
+$\ParNumberOfPeople$             & set & var & DESCRIPTION \\ 
+$\ParOperatingTime$              & set & var & DESCRIPTION \\ 
+$\ParDuration$                   & set & var & DESCRIPTION \\ 
+\midrule
+$\ParSupervisorValue$            & set & var & DESCRIPTION \\ 
+$\ParFeasible$                   & set & var & DESCRIPTION \\ 
+$\ParOperationsForWorkOrder$     & set & var & DESCRIPTION \\ 
+$\ParOperationsInWorkOrder$      & set & var & DESCRIPTION \\ 
+$\ParActivitiesForOperation$     & set & var & DESCRIPTION \\ 
+$\ParLowerActivityWork$          & set & var & DESCRIPTION \\ 
+\midrule
+$\ParActivityWork{}$             & set & var & DESCRIPTION \\ 
+$\ParPreparation$                & set & var & DESCRIPTION \\ 
+$\ParEvent$                      & set & var & DESCRIPTION \\ 
+$\ParEventDuration$              & set & var & DESCRIPTION \\ 
+$\ParConstraintLimit$            & set & var & DESCRIPTION \\ 
+$\ParTimeWindowStart$            & set & var & DESCRIPTION \\ 
+$\ParTimeWindowFinish$           & set & var & DESCRIPTION \\ 
+$\ParAvailabilityStart$          & set & var & DESCRIPTION \\ 
+$\ParAvailabilityFinish$         & set & var & DESCRIPTION \\ 
+\bottomrule
+\end{tabularx}
+\caption{Parameters used in the model setup}
+\end{table*}
+
+\newpage
+\begin{table*}[htbp!]
+\begin{tabularx}{\textwidth}{4}
+\toprule
+\textbf{Variable}                       & \textbf{Set Selectors}                                                    & \textbf{Dependent Variable} & \textbf{Description}  \\ 
+\midrule
+$\VarStrategicWorkOrderAssignment{}{}$  & \ElementWorkOrder, \ElementPeriod                                         & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarStrategicExcess$                   & \ElementPeriod, \ElementResource                                          & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarTacticalWork{}{}$                  & \ElementDays, \ElementOperation                                           & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarTacticalExcess$                    & \ElementResource, \ElementDays                                            & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarTacticalWorkBinary{}{}$            & \ElementDays, \ElementOperation                                           & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarTacticalWorkBinaryConsecutive$     & \ElementDays, \ElementOperation                                           & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarTacticalOperationDifference$       & \ElementOperation                                                         & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarSupervisorAssignment{}{}$          & \ElementActivity, \ElementTechnician                                      & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarSupervisorAssignmentWhole$         & \ElementOperation                                                         & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarActivityWork{}$                    & \ElementActivity                                                          & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarProcessingTime$                    & \ElementActivity, \ElementWorkSegment                                     & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarActiveSegment{}{}$                 & \ElementActivity, \ElementWorkSegment                                     & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarStartOfSegment{}{}$                & \ElementActivity, \ElementWorkSegment                                     & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarFinishOfSegment{}{}$               & \ElementActivity, \ElementWorkSegment                                     & $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarSegmentInRelation$                 & \ElementActivity, \ElementWorkSegment, \ElementTimeInstance, \ElementEvent& $\VarMetaTime$ & DESCRIPTION \\ 
+$\VarIncludeActivity{}$                 & \ElementActivity                                                          & $\VarMetaTime$ & DESCRIPTION \\ 
+\midrule
+$\VarMetaTime$                          & None                                                                      & None & DESCRIPTION \\ 
+\bottomrule
+\end{tabularx}
+\caption{Variables used in the model setup}
+\end{table*}
+
