--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
+\usepackage{booktabs}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{multicol}
@@ -11,6 +12,8 @@
 \usepackage{hyperref}
 \usepackage{booktabs} % For professional quality tables
 \usepackage{array}    % For better column alignment
+\usepackage{tabularx}
+
 
 \usepackage[a4paper,width=175mm,top=20mm,bottom=20mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
