added: meta-variable for each section

--- a/tex/definitions.tex
+++ b/tex/definitions.tex
@@ -14,15 +14,21 @@
 \newcommand{\SetActivity}[2]{A_{#2}(\VarMetaTime, #1)}
 \newcommand{\ElementActivity}{a}
 
-\newcommand{\SetTechnician}{T(\VarMetaTime)}
-\newcommand{\ElementTechnician}{t}
 \newcommand{\SetWorkSegment}{K(\VarSupervisorAssignment{}{})}
 \newcommand{\ElementWorkSegment}{k}
-
 \newcommand{\SetTimeInstance}{I(\VarMetaTime)}
 \newcommand{\ElementTimeInstance}{i}
+
 \newcommand{\SetEvent}{E(\VarMetaTime)}
 \newcommand{\ElementEvent}{e}
+
+\newcommand{\SetScheduler}{S}
+\newcommand{\ElementScheduler}{s}
+\newcommand{\SetSupervisor}{Z}
+\newcommand{\ElementSupervisor}{z}
+
+\newcommand{\SetTechnician}{T(\VarMetaTime)}
+\newcommand{\ElementTechnician}{t}
 
 % Parameters
 \newcommand{\ParStrategicValue}{strategic\_value_{\ElementWorkOrder \ElementPeriod}(\VarMetaTime)}
