--- a/tex/models/tactical.tex
+++ b/tex/models/tactical.tex
@@ -10,6 +10,10 @@ out on each of the days of the work orders scheduled by the strategic agent.
 
 The tactical model is responsible for providing an initial suggestion for a weekly schedule, below we see the model for the tactical agent.
 \begin{alignat}{2}
+	& \textbf{Meta variables:} \notag\\
+	& \ElementScheduler = \SetScheduler \notag\\
+	& \tau \in [0, \infty] \notag\\
+	& \VarStrategicWorkOrderAssignment{}{} \notag\\
 	& \textbf{Minimize:} \notag\\
 	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \sum_{\ElementDays \in \SetDays{}} \ParTacticalValue!!!!!!!!!!!!! \cdot \VarTacticalWork{\ElementDays}{\ElementOperation}\notag\\  
 	& + \sum_{r \in \SetResource} \sum_{\ElementDays \in \SetDays{}} \ParTacticalPenalty \cdot \VarTacticalExcess                                               \\  
