Updates from Overleaf

--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -1,3 +1,112 @@
+@article{ehrgott2002multiple,
+  title={Multiple criteria optimization: state of the art annotated bibliographic surveys},
+  author={Ehrgott, Matthias and Gandibleux, Xavier},
+  year={2002},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{barthelemy2002human,
+  title={Human centered processes and decision support systems},
+  author={Barth{\'e}lemy, Jean-Pierre and Bisdorff, Raymond and Coppin, Gilles},
+  journal={European Journal of Operational Research},
+  volume={136},
+  number={2},
+  pages={233--252},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{meignan_review_2015,
+	title = {A {Review} and {Taxonomy} of {Interactive} {Optimization} {Methods}
+	         in {Operations} {Research}},
+	volume = {5},
+	issn = {2160-6455, 2160-6463},
+	url = {https://dl.acm.org/doi/10.1145/2808234},
+	doi = {10.1145/2808234},
+	abstract = {This article presents a review and a classification of
+	            interactive optimization methods. These interactive methods are
+	            used for solving optimization problems. The interaction with an
+	            end user or decision maker aims at improving the efficiency of
+	            the optimization procedure, enriching the optimization model, or
+	            informing the user regarding the solutions proposed by the
+	            optimization system. First, we present the challenges of using
+	            optimization methods as a tool for supporting decision making,
+	            and we justify the integration of the user in the optimization
+	            process. This integration is generally achieved via a dynamic
+	            interaction between the user and the system. Next, the different
+	            classes of interactive optimization approaches are presented.
+	            This detailed review includes trial and error, interactive
+	            reoptimization, interactive multiobjective optimization,
+	            interactive evolutionary algorithms, human-guided search, and
+	            other approaches that are less well covered in the research
+	            literature. On the basis of this review, we propose a
+	            classification that aims to better describe and compare
+	            interaction mechanisms. This classification offers two
+	            complementary views on interactive optimization methods. The
+	            first perspective focuses on the user’s contribution to the
+	            optimization process, and the second concerns the components of
+	            interactive optimization systems. Finally, on the basis of this
+	            review and classification, we identify some open issues and
+	            potential perspectives for interactive optimization methods.},
+	language = {en},
+	number = {3},
+	urldate = {2024-04-18},
+	journal = {ACM Transactions on Interactive Intelligent Systems},
+	author = {Meignan, David and Knust, Sigrid and Frayret, Jean-Marc and Pesant
+	          , Gilles and Gaud, Nicolas},
+	month = oct,
+	year = {2015},
+	pages = {1--43},
+	file = {Meignan et al. - 2015 - A Review and Taxonomy of Interactive
+	        Optimization .pdf:/home/scipo/Zotero/storage/MU3Y82T3/Meignan et al.
+	        - 2015 - A Review and Taxonomy of Interactive Optimization
+	        .pdf:application/pdf},
+}
+
+@article {Pareto1897,
+	author = {Pareto, Vilfredo}, 
+	title = {The New Theories of Economics}, 
+	journal = {The Journal of Political Economy}, 
+	volume = {5}, 
+	number = {4}, 
+	pages = {485-502}, 
+	year = {1897}, 
+	issn = {00223808, 1537534x}
+}
+
+@article{ben2009robust,
+  title={Robust optimization},
+  author={Ben-Tal, Aharon and Nemirovski, Arkadi and El Ghaoui, Laurent},
+  year={2009},
+  publisher={Princeton university press}
+}
+
+@book{birge2011introduction,
+  title={Introduction to stochastic programming},
+  author={Birge, John R and Louveaux, Francois},
+  year={2011},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{zadeh1988fuzzy,
+  title={Fuzzy logic},
+  author={Zadeh, Lotfi Asker},
+  journal={Computer},
+  volume={21},
+  number={4},
+  pages={83--93},
+  year={1988},
+  publisher={IEEE}
+}
+
+@book{garey1979computers,
+  title={Computers and intractability},
+  author={Garey, Michael R and Johnson, David S},
+  volume={174},
+  year={1979},
+  publisher={freeman San Francisco}
+}
+
 @article{geurtsenProductionMaintenanceResource2023,
 	title = {Production, Maintenance and Resource Scheduling: {{A}} Review},
 	shorttitle = {Production, Maintenance and Resource Scheduling},
