--- a/tex/models/strategic.tex
+++ b/tex/models/strategic.tex
@@ -13,6 +13,7 @@ This kind of model closely resembles a variant of the multi-compartment multi-kn
 
 
 \begin{alignat}{2}
+	& \text{\rule{\linewidth}{0.4pt}} \notag\\
 	& \textbf{Meta variables:} \notag\\
 	& \ElementScheduler \in \SetScheduler \notag\\
 	& \tau \in [0, \infty] \notag\\
